Changed poms for test warnings